--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ body {
 }
 #refresh-icon {
   color: #7a7a7a;
+  cursor: pointer;
 }
 .input-text-div {
   width: 100%;
@@ -189,7 +190,7 @@ body {
   -moz-box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.75);
   font-weight: 500;
-
+  cursor: pointer;
   transition: 0.3s ease-out;
 }
 .submitButton:hover {
